[gd_scene load_steps=5 format=3 uid="uid://cw0xp145gf2ef"]

[ext_resource type="Script" path="res://scripts/enemy/enemy_1.gd" id="1_ih5on"]
[ext_resource type="AudioStream" uid="uid://bd7wrs0n0m01n" path="res://assets/sound/enemy/mixkit-air-in-a-hit-2161.mp3" id="3_hfnst"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cvu14"]
radius = 25.02

[sub_resource type="CircleShape2D" id="CircleShape2D_pw3hx"]
radius = 26.0192

[node name="Drone" type="CharacterBody2D" groups=["enemies"]]
position = Vector2(502, 301)
collision_layer = 8
collision_mask = 3
script = ExtResource("1_ih5on")
speed = null
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cvu14")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]

[node name="QueueFreeTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="DamageCollider" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_pw3hx")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LostHeatlhSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hfnst")

[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="timeout" from="QueueFreeTimer" to="." method="_on_queue_free_timer_timeout"]
[connection signal="area_entered" from="DamageArea" to="." method="_on_damage_area_area_entered"]
[connection signal="area_shape_entered" from="DamageArea" to="." method="_on_damage_area_area_shape_entered"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
